# space-bot

./: .breakpoints  .dockerignore  .gitignore  .gitmodules  .main.py.swp  .requirements.txt.kate-swp  1-2Z8J8lj02j2nTv41rTntp5LNcyZOhVy  Dockerfile  LICENSE  README.md  all the libraries i have on my pc lmao  ascii.py  build.py  config.json  config.yaml.example  docker-compose.yml  keys.env  laptop_pip.txt  log.latest  main.py  message.txt  otherRequirements.txt  privacy-policy.md  pyproject.toml  requirements.txt  service.md  setup.py  setup.txt  statuses.json  test  test.py  wiki.py
ace-attorney-discord-bot/: config.yaml.example  main.py  requirements.txt
backStorage/: shitpost.json
cogs/: 8ball.py  admin.py  economy.py  events.py  fun.py  funky_shit.py  github.py  help.py  hwstatus.py  images.py  info.py  marriage.py  marriage.txt  misc.py  music.py  owner.py  owner_events.py  polls.py  rainbowpfp.py  roles.py  search.py  settings.py  slash.txt  social.py  suggestions.py  test.py  weather.py
data/: all_message_ids.json  bank.json  hendex.json  items.json  lat-35.2976lon149.1013altitudeNone_compact.json  lat30.8327lon-83.2785altitudeNone_compact.json  lat30.9202lon-93.9966altitudeNone_compact.json  lat35.6828lon139.7595altitudeNone_compact.json  lat38.6287lon-92.566altitudeNone_compact.json  lat39.9062lon116.3913altitudeNone_compact.json  lat40.7127lon-74.006altitudeNone_compact.json  lat44.9331lon7.5401altitudeNone_compact.json  lat59.9133lon10.739altitudeNone_compact.json  lat68.9297lon16.5209altitudeNone_compact.json  lat69.6516lon18.9558altitudeNone_compact.json  (+3 more)
(+158 files in other folders)
