[tool.poetry]
name = "andromeda-40"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
py-cord = "^1.7.3"
Flask = "^2.0.2"
buttons = "^0.1.9"
replit = "^3.2.4"
wikipedia = "^1.4.0"
APScheduler = "^3.8.1"
imgurpython = "^1.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
