[tool.poetry]
name = "space-bot"
version = "i'm not updating this so just check config.json lmao"
description = "does space stuff"
authors = ["JustTemmie"]
license = "GNU GPL v3"

[tool.poetry.dependencies]
python = "^3.10"
wikipedia = "^1.4.0"
GitPython = "^3.1.29"
python-dotenv = "^0.21.0"
psutil = "^5.9.4"
APScheduler = "^3.9.1"
Pillow = "^9.3.0"
metno-locationforecast = "^1.1.0"
pdf2image = "^1.16.0"
youtube_dl = "^2021.12.17"
PyNaCl = "^1.5.0"
yt-dlp = "^2022.11.11"
topggpy = "^1.4.0"
captcha = "^0.4"
IMDbPY = "^2022.7.9"
qrcode = "^7.3.1"
opencv-python = "^4.6.0"
numpy = "1.22.1"
image = "^1.5.33"
interruptingcow = "^0.8"
"discord.py" = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
